--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.1.0",
     "bcryptjs": "^2.4.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "supertest": "^7.0.0",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
@@ -35,12 +41,17 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@swc/core": "^1.10.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^2.1.8",
     "dotenv": "^16.4.7",
+    "eslint": "^8.57.1",
     "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
