--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -44,5 +44,6 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           PUBLIC_KEY: ${{ secrets.PUBLIC_KEY }}
+          UPLOAD_FOLDER: ./upload
           DATABASE_URL: postgresql://postgres:docker@localhost:5432/personal-management?schema=public
         run: npm run test:e2e
