--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
