--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
